# crypto_task3_4

./: .gitignore  README.md
hash_project/: CMakeLists.txt  hash_func.cpp  hash_func.h  main.cpp
hash_project/tests/: tests.cpp
task_3_6/: key.pub  other_team.crt  other_team.csr  server.crt  server.csr  server.key  server.srl  zahorulko_signed.crt
